# MergeNSortedFiles

./: CMakeLists.txt  README.md
data/: file1.txt  file2.txt  file3.txt
src/: coreworker.cpp  coreworker.h  sortfiles.cpp  sortfiles.h  utils.cpp  utils.h
